<resources>
    <string name="app_name">NovelDokusha</string>
    <string name="title_library">Library</string>
    <string name="title_finder">Finder</string>
    <string name="title_settings">Settings</string>
    <string name="reader_no_more_chapters">༺  Last chapter  ༻</string>
    <string name="reader_first_chapter">༺  First chapter  ༻</string>
    <string name="alternative_titles">Alternative titles</string>
    <string name="authors">Authors</string>
    <string name="tags">Tags</string>
    <string name="genres">Genres</string>
    <string name="related_books">Related books</string>
    <string name="similar_recommended">Similar recommended</string>
    <string name="database_size">Database size:</string>
    <string name="backup">Backup</string>
    <string name="theme">Theme</string>
    <string name="data">Data</string>
    <string name="clean_database">Clean database</string>
    <string name="preserve_only_library_books_data">Preserve only library books data</string>
    <string name="backup_data">Backup data</string>
    <string name="opens_the_file_explorer_to_select_the_backup_saving_location">Opens the file explorer to select the backup saving location</string>
    <string name="restore_data">Restore data</string>
    <string name="opens_the_file_explorer_to_select_the_backup_file">Opens the file explorer to select the backup file</string>
    <string name="added_to_library">Added to library</string>
    <string name="removed_from_library">Removed from library</string>
    <string name="permissions_denied">Permissions denied</string>
    <string name="no_chapters_found">No chapters found</string>
    <string name="backup_saved">Backup saved</string>
    <string name="failed_to_make_backup">Failed to make backup</string>
    <string name="failed_to_restore_cant_access_file">Failed to restore, can\'t access file</string>
    <string name="failed_to_restore_invalid_backup_database">Failed to restore, invalid backup database</string>
    <string name="database_restored">Database restored</string>
    <string name="webview_not_available">Webview not available</string>
    <string name="invalid_URL">Invalid URL</string>
    <string name="cookies_saved">Tasty cookies saved</string>
    <string name="database">Database</string>
    <string name="chapters">Chapters</string>
    <string name="open_in_browser">Open in browser</string>
    <string name="sources">Sources</string>
    <string name="search_for_sources">Search for sources</string>
    <string name="import_epub">Import EPUB</string>
    <string name="failed_get_file">Failed to get the file</string>
    <string name="local_book_nothing_to_update">Local book, nothing to update</string>
    <string name="failed_to_import_epub">Failed to import epub</string>
    <string name="image">image</string>
    <string name="importing_epub">Importing epub</string>
    <string name="no_results_found">No results found</string>
    <string name="updaing_library">Updating library</string>
    <string name="search_by_title">Search by title</string>
    <string name="clean_images_folder">Clean images folder</string>
    <string name="preserve_only_images_from_library_books">Preserve only images from library books</string>
    <string name="images_total_size">Images total size:</string>
    <string name="follow_system">Follow system</string>
    <string name="sources_languages">Sources languages</string>
    <string name="epub_added_to_library">Epub added to library</string>
    <string name="invalid_chapter">Invalid chapter</string>
    <string name="filter">Filter</string>
    <string name="read">Read</string>
    <string name="sort">Sort</string>
    <string name="options_panel">Options panel</string>
    <string name="search_with_filters">Search with filters</string>
    <string name="none_found">None found</string>
    <string name="no_more_results">No more results</string>
    <string name="global_search">Global search</string>
    <string name="error_loading">Error loading</string>
    <string name="open_the_web_view">Open the web view</string>
    <string name="search_for_title">Search for title</string>
    <string name="search_here">Search here</string>
    <string name="catalog">Catalog</string>
    <string name="open_for_more_options">Open for more options</string>
    <string name="list">List</string>
    <string name="grid">Grid</string>
    <string name="copy_error">Copy error</string>
    <string name="reload">Reload</string>
    <string name="remove_selected_chapters_dowloads">Remove selected chapters\' downloads</string>
    <string name="download_selected_chapters">Download selected chapters</string>
    <string name="set_as_read_selected_chapters">Set as read selected chapters</string>
    <string name="set_as_not_read_selected_chapters">Set as not read selected chapters</string>
    <string name="select_all_chapters">Select all chapters</string>
    <string name="close_selection_bar">Close selection bar</string>
    <string name="open_last_read_chapter">Open last read chapter</string>
    <string name="updating_book_info">Updating book info</string>
    <string name="backup_options">Backup options</string>
    <string name="save_images">Save images</string>
    <string name="settings_translations_models_main_description">Download the desired languages models to translate novels on the fly</string>
    <string name="settings_title_translation_models">Live translation models</string>
    <string name="translating_from_lang_a_to_lang_b">Translating from %1$s to %2$s</string>
    <string name="language_source_empty_text">Source</string>
    <string name="language_target_empty_text">Target</string>
    <string name="language_clear_selection">Clear selection</string>
    <string name="live_translation">Live translation</string>
    <string name="creating_backup">Creating backup</string>
    <string name="copying_database">Copying database</string>
    <string name="copying_images">Copying images</string>
    <string name="loading_database">Loading database</string>
    <string name="adding_books">Adding books</string>
    <string name="adding_chapters">Adding chapters</string>
    <string name="adding_chapters_text">Adding chapters text</string>
    <string name="adding_images">Adding images</string>
    <string name="data_restored">Data restored</string>
    <string name="completed">Completed</string>
    <string name="loading_data">Loading data</string>
    <string name="pin_or_unpin_source">Pin or unpin source</string>
    <string name="allow_text_selection">Text selection</string>
    <string name="last_read">Last read</string>
    <string name="voices">Voices</string>
    <string name="search_voice_by_language">Search voice by language</string>
    <string name="needs_internet">Needs Internet</string>
    <string name="no_matches">No matches</string>
    <string name="start_here">Start here</string>
    <string name="focus">Focus</string>
    <string name="voice_pitch">Voice pitch</string>
    <string name="voice_speed">Voice speed</string>
    <string name="chapter_x_over_n">Chapter: %1$d/%2$d</string>
    <string name="progress_x_percentage">Progress: %1$.0f%%</string>
    <string name="text_size">Text size</string>
    <string name="name">Name</string>
    <string name="save_current_voice">Save current voice</string>
    <string name="save_current_voice_parameters">Save current voice and parameters</string>
    <string name="layout">Layout</string>
    <string name="open_translation_models_manager">Open translation models manager</string>
    <string name="new_chapters">New chapters</string>
    <string name="update_error">Update error</string>
    <string name="media_control_previous">previous</string>
    <string name="media_control_rewind">rewind</string>
    <string name="media_control_play">play</string>
    <string name="media_control_pause">pause</string>
    <string name="media_control_fast_forward">fast_forward</string>
    <string name="media_control_next">next</string>
    <string name="delete">Delete</string>
    <string name="english">English</string>
    <string name="filter_title">Title</string>
    <string name="filter_genres">Genres</string>
    <string name="clear_filters">Clear</string>
    <string name="filter_catalog">Catalog</string>
    <string name="allow_the_denied_permissions_to_perform_the_action">Allow the denied permissions to perform the action</string>
    <string name="app_settings">App settings</string>
    <string name="resume_reading">Resume reading</string>
    <string name="find_in_database">Find in database</string>
    <string name="by_chapter_name">By chapter name</string>
    <string name="theme_name_light">Light</string>
    <string name="theme_name_dark">Dark</string>
    <string name="theme_name_grey">Grey</string>
    <string name="theme_name_black">Black</string>
    <string name="translator">Translator</string>
    <string name="voice_reader">Voice reader</string>
    <string name="more">More</string>
    <string name="style">Style</string>
    <string name="saved_voices">Saved voices</string>
    <string name="no_voices_saved">No voices saved</string>
    <string name="cancel">Cancel</string>
    <string name="save_voice">Save voice</string>
    <string name="delete_voice">Delete voice</string>
    <string name="translate">Translate</string>
    <string name="size">Size</string>
    <string name="add_local_directory">Add local directory</string>
    <string name="configuration">Configuration</string>
    <string name="done">Done</string>
    <string name="close">Close</string>
    <string name="no_directories_added_please_add_them_to_see_them_in_the_source_catalog_list">No directories added, please add them to see them in the source catalog list</string>
    <string name="local">Local</string>
    <string name="invalid_source">Invalid source</string>
    <string name="language_english">English</string>
    <string name="language_portuguese">Portuguese</string>
    <string name="language_spanish">Spanish</string>
    <string name="language_french">French</string>
    <string name="source_name_local">Local</string>
    <string name="updating_library">Updating library (%1$d/%2$d)</string>
    <string name="notification_channel_name_reader_narrator">Reader narrator</string>
    <string name="notification_channel_name_library_update">Library update</string>
    <string name="notification_channel_name_new_chapters">New chapters</string>
    <string name="notification_channel_name_failed_updates">Failed updates</string>
    <string name="notification_channel_name_backup">Backup</string>
    <string name="notification_channel_name_import_epub">Import EPUB</string>
    <string name="notification_channel_name_restore_backup">Restore backup</string>
    <string name="notification_channel_name_app_updates_checker">Updates checker</string>
    <string name="new_app_version_available">New app version available</string>
    <string name="backup_restored">Backup restored</string>
    <string name="keep_screen_on">Keep screen on</string>
    <string name="change_cover">Change cover</string>
	<string name="app_updates">App updates</string>
    <string name="automatically_check_for_app_updates">Automatically check for app updates</string>
    <string name="check_for_app_updates_now">Check for app updates now</string>
	<string name="you_already_have_the_last_version">You already have the last version</string>
    <string name="failed_to_check_last_app_version">Failed to check last app version</string>
	<string name="download">Download</string>
	<string name="new_app_version_found_s">New app version found %s</string>
	<string name="automatically_check_for_library_updates">Automatically check for library updates</string>
	<string name="library_update_interval_6_h">6 h</string>
    <string name="library_update_interval_12_h">12 h</string>
    <string name="library_update_interval_1_day">1 day</string>
</resources>