<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_library"
    >

    <fragment
        android:id="@+id/navigation_library"
        android:name="my.noveldokusha.ui.main.LibraryFragment"
        android:label="@string/title_library"
        tools:layout="@layout/activity_main_fragment_library"
        />

    <fragment
        android:id="@+id/navigation_finder"
        android:name="my.noveldokusha.ui.main.FinderFragment"
        android:label="@string/title_finder"
        tools:layout="@layout/activity_main_fragment_finder"
        />
    <fragment
        android:id="@+id/navigation_settings"
        android:name="my.noveldokusha.ui.main.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/activity_main_fragment_settings"
        />
</navigation>