<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:orientation="vertical"
	android:paddingBottom="50dp"
	>

	<TextView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:padding="16dp"
		android:text="@string/filter"
		android:textColor="?colorAccent"
		android:textStyle="bold"
		/>

	<my.noveldokusha.uiViews.Checkbox3StatesView
		android:id="@+id/filter_read"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:clickable="true"
		android:text="@string/read"
		/>

	<View
		android:layout_width="wrap_content"
		android:layout_height="0.5dp"
		android:alpha="0.25"
		android:background="?colorOnPrimary"
		/>

	<TextView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:padding="16dp"
		android:text="@string/sort"
		android:textColor="?colorAccent"
		android:textStyle="bold"
		/>

	<TextView
		android:id="@+id/sort_read"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:clickable="true"
		android:drawablePadding="12dp"
		android:foreground="@drawable/item_foreground_ripple_rect"
		android:gravity="center_vertical"
		android:padding="16dp"
		android:text="@string/read"
		app:drawableStartCompat="@drawable/ic_baseline_arrow_upward_24"
		/>
</LinearLayout>